# multilang

./: CMakeLists.txt
mll/: CMakeLists.txt
mll-demo/: CMakeLists.txt
mll-demo/include/: mll
mll-demo/src/: main.cpp
mll-js/: CMakeLists.txt
mll-js/include/: iJs.h  iJsInfo.h
mll-js/libs/: libduktape.so.105  libduktape.so.199
mll-js/src/: iJs.cpp  iJsInfo.cpp
mll-lua/: CMakeLists.txt
mll-lua/include/: iLua.h  iLuaInfo.h  mll
mll-lua/include/lua/: confdefs.h
mll-lua/src/: iLua.cpp  iLuaInfo.cpp
mll/include/mll/: mlCallback.h  mlException.h  mlFactory.h  mlInterpreter.h  mlInterpreterInfo.h  mlLib.h  mlSupport.h  mlVariable.h  mlVariable.inc  mll.h
mll/src/: mlCallback.cpp  mlFactory.cpp  mlInterpreter.cpp  mlLib.cpp  mlVariable.cpp
mll/src/lib/: ML.cpp
